# aiaiai

./: .editorconfig  .envrc  .envrc.local.example  .gitignore  .mcp.json  AGENTS.md  Makefile  README.md  coldstart-prompt.md  devbox.json  fastmcp.json  main.py  process-compose.yaml  pyproject.toml  requirements.in  requirements.txt
aiaiai/application/: roll_dice.py
aiaiai/domain/: dice.py
aiaiai/infrastructure/entrypoints/fastmcp_cli/: main.py
litellm/: config.yaml  config.yaml.example
pi/: models.json.example
scripts/: setup.sh
searxng/: settings.yml  settings.yml.example
