[project]
name = "aiaiai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.0.0rc1",
]

[tool.ruff.lint]
# Turn on import sorting (isort compatible)
extend-select = ["I"]

[tool.isort]
profile = "black"

[tool.pyright]
venvPath = "."
venv = ".venv"
